Get rid of event receiver, move event forwarding code to dedicated files

--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -36,10 +36,10 @@ libmmbase_la_SOURCES = \
 	event/dispatch.c event/dispatch.h \
 	event/epoll.c event/epoll.h \
 	event/event.c event/event.h \
+	event/forward.c event/forward.h \
 	event/kqueue.c event/kqueue.h \
 	event/listener.c event/listener.h \
 	event/nonblock.c event/nonblock.h \
-	event/receiver.c event/receiver.h \
 	event/selfpipe.c event/selfpipe.h \
 	memory/alloc.h \
 	memory/arena.h \
