Move event handling inline routines to a dedicated header

--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -37,6 +37,7 @@ libmmbase_la_SOURCES = \
 	event/epoll.c event/epoll.h \
 	event/event.c event/event.h \
 	event/forward.c event/forward.h \
+	event/handle.h \
 	event/kqueue.c event/kqueue.h \
 	event/listener.c event/listener.h \
 	event/nonblock.c event/nonblock.h \
