--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -34,6 +34,7 @@ libmmbase_la_SOURCES = \
 	syscall.h \
 	timeq.c timeq.h \
 	topology.c topology.h \
+	arch/intrinsic.h \
 	event/backend.c event/backend.h \
 	event/dispatch.c event/dispatch.h \
 	event/epoch.c event/epoch.h \
@@ -70,8 +71,7 @@ libmmbase_la_SOURCES += \
 	arch/x86/atomic.h \
 	arch/x86/basic.h \
 	arch/x86/cstack.c arch/x86/cstack-switch.S \
-	arch/x86/fence.h \
-	arch/x86/spin.h \
+	arch/x86/intrinsic.h \
 	arch/x86/syscall.h arch/x86/syscall.c
 endif
 
@@ -81,8 +81,7 @@ libmmbase_la_SOURCES += \
 	arch/x86-64/atomic.h \
 	arch/x86-64/basic.h \
 	arch/x86-64/cstack.c arch/x86-64/cstack-switch.S \
-	arch/x86-64/fence.h \
-	arch/x86-64/spin.h \
+	arch/x86-64/intrinsic.h \
 	arch/x86-64/syscall.h arch/x86-64/syscall.c
 endif
 
@@ -91,6 +90,6 @@ libmmbase_la_SOURCES += \
 	arch/generic/atomic.h \
 	arch/generic/basic.h \
 	arch/generic/cstack.c \
-	arch/generic/spin.h \
+	arch/generic/intrinsic.h \
 	arch/generic/syscall.h
 endif
