Move all core files to base/fiber

--- a/configure.ac
+++ b/configure.ac
@@ -5,7 +5,7 @@ AC_PREREQ(2.68)
 AC_INIT([MainMemory], [0.0], [ademakov@gmail.com])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([config])
-AC_CONFIG_SRCDIR([src/core/runq.c])
+AC_CONFIG_SRCDIR([src/base/bitops.h])
 AC_CONFIG_HEADERS([src/config.h])
 
 dnl Initialize automake.
