--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,16 +8,7 @@ bin_PROGRAMS = mmd
 lib_LTLIBRARIES = libmm.la
 
 core_sources = \
-	common.h \
-	core/async.c core/async.h \
-	core/combiner.c core/combiner.h \
-	core/core.c core/core.h \
-	core/future.c core/future.h \
-	core/runq.c core/runq.h \
-	core/task.c core/task.h \
-	core/timer.c core/timer.h \
-	core/wait.c core/wait.h \
-	core/work.c core/work.h
+	common.h
 
 net_sources = \
 	net/net.c net/net.h \
