--- a/examples/hello_server/Makefile.am
+++ b/examples/hello_server/Makefile.am
@@ -4,4 +4,4 @@ AM_CFLAGS = -Wall -Wextra
 noinst_PROGRAMS = hello_server
 
 hello_server_SOURCES = hello_server.c
-hello_server_LDADD = $(top_builddir)/src/libmm.la
+hello_server_LDADD = $(top_builddir)/src/libmain.la
