--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,9 +3,9 @@ SUBDIRS = base memcache
 
 AM_CFLAGS = -Wall -Wextra
 
-bin_PROGRAMS = mmd
+bin_PROGRAMS = maind
 
-lib_LTLIBRARIES = libmm.la
+lib_LTLIBRARIES = libmain.la
 
 core_sources = \
 	common.h
@@ -14,8 +14,8 @@ net_sources = \
 	net/net.c net/net.h \
 	net/netbuf.c net/netbuf.h
 
-libmm_la_SOURCES = $(core_sources) $(net_sources)
-libmm_la_LIBADD = base/libmmbase.la
+libmain_la_SOURCES = $(core_sources) $(net_sources)
+libmain_la_LIBADD = base/libmainbase.la
 
-mmd_SOURCES = main.c
-mmd_LDADD = memcache/libmemcache.a libmm.la
+maind_SOURCES = main.c
+maind_LDADD = memcache/libmaincache.a libmain.la
