Move net files to base/net

--- a/examples/proxy_server/Makefile.am
+++ b/examples/proxy_server/Makefile.am
@@ -4,4 +4,4 @@ AM_CFLAGS = -Wall -Wextra
 noinst_PROGRAMS = proxy_server
 
 proxy_server_SOURCES = proxy_server.c
-proxy_server_LDADD = $(top_builddir)/src/libmain.la
+proxy_server_LDADD = $(top_builddir)/src/base/libmainbase.la
