--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,18 +5,8 @@ AM_CFLAGS = -Wall -Wextra
 
 bin_PROGRAMS = maind
 
-lib_LTLIBRARIES = libmain.la
-
-core_sources = \
-	common.h
-
-net_sources = \
-	net/address.h net/address.c \
-	net/net.c net/net.h \
-	net/netbuf.c net/netbuf.h
-
-libmain_la_SOURCES = $(core_sources) $(net_sources)
-libmain_la_LIBADD = base/libmainbase.la
+noinst_HEADERS = common.h
+nodist_noinst_HEADERS = config.h
 
 maind_SOURCES = main.c
-maind_LDADD = memcache/libmaincache.a libmain.la
+maind_LDADD = memcache/libmaincache.a base/libmainbase.la
