Move tasks up from event to base level

--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -37,6 +37,7 @@ libmainbase_la_SOURCES = \
 	settings.c settings.h \
 	stdcall.h \
 	syscall.h \
+	task.c task.h \
 	timeq.c timeq.h \
 	timesource.h \
 	topology.c topology.h \
@@ -51,7 +52,6 @@ libmainbase_la_SOURCES = \
 	event/listener.c event/listener.h \
 	event/nonblock.c event/nonblock.h \
 	event/selfpipe.c event/selfpipe.h \
-	event/task.c event/task.h \
 	fiber/async.c fiber/async.h \
 	fiber/combiner.c fiber/combiner.h \
 	fiber/fiber.c fiber/fiber.h \
