Add elementary unit test for memory allocator

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -4,11 +4,12 @@ AM_CFLAGS = -Wall -Wextra
 
 LDADD = $(top_builddir)/src/base/libmainbase.la
 
-TESTS = bitops-test bitset-test json-reader-test scan-test
+TESTS = bitops-test bitset-test json-reader-test memory-cache-test scan-test
 
 check_PROGRAMS = $(TESTS)
 
 bitops_test_SOURCES = bitops-test.c
 bitset_test_SOURCES = bitset-test.c
 json_reader_test_SOURCES = json-reader-test.c
+memory_cache_test_SOURCES = memory-cache-test.c
 scan_test_SOURCES = scan-test.c
