Tweak, improve, and extend memory allocation code

--- a/src/base/Makefile.am
+++ b/src/base/Makefile.am
@@ -59,7 +59,7 @@ libmainbase_la_SOURCES = \
 	fiber/runq.c fiber/runq.h \
 	fiber/strand.c fiber/strand.h \
 	fiber/wait.c fiber/wait.h \
-	memory/alloc.h \
+	memory/allocx.h \
 	memory/arena.h \
 	memory/buffer.c memory/buffer.h \
 	memory/cache.c memory/cache.h \
