Remove no longer used spsc ring

--- a/tests/base/Makefile.am
+++ b/tests/base/Makefile.am
@@ -4,12 +4,10 @@ AM_CFLAGS = -Wall -Wextra
 
 LDADD = $(top_builddir)/src/base/libmainbase.la
 
-noinst_PROGRAMS = combiner-bench lock-bench ring-mpmc-bench ring-spsc-bench
+noinst_PROGRAMS = combiner-bench lock-bench ring-mpmc-bench
 
 combiner_bench_SOURCES = combiner-bench.c params.c params.h runner.c runner.h
 
 lock_bench_SOURCES = lock-bench.c params.c params.h runner.c runner.h
 
 ring_mpmc_bench_SOURCES = ring-mpmc-bench.c params.c params.h runner.c runner.h
-
-ring_spsc_bench_SOURCES = ring-spsc-bench.c params.c params.h runner.c runner.h
